Fix overlapping element

--- a/src/ResqueBoard/webroot/css/less/main.less
+++ b/src/ResqueBoard/webroot/css/less/main.less
@@ -926,6 +926,10 @@ form label .icon-info-sign
 		text-align: right;
 		font-size: 12px;
 		
+		b {
+			z-index: 50;
+			position: relative;
+		}
 	}
 	
 	b {
